YUK-20509 - DR Setup Trigger popup spacing issues   - fix trigger spacing issues in Create/Edit mode

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -2006,6 +2006,11 @@ table th, .title-header, .column-header {
     padding-right:10px;
 }
 
+.js-edit-trigger .name {
+    line-height: 25px;
+    vertical-align: middle;
+}
+
 /* JUNK TO FIX */
 .CONTROLAREA_STATE_ACTIVE, .CONTROLAREA_STATE_PARTIALLY_ACTIVE, .CONTROLAREA_STATE_MANUAL_ACTIVE, .PROGRAM_STATE_ACTIVE, .PROGRAM_STATE_PARTIALLY_ACTIVE, .PROGRAM_STATE_MANUAL_ACTIVE, .PROGRAM_STATE_TIMED_ACTIVE, .LOADGROUP_STATE_ACTIVE {color: @green;}
 .CONTROLAREA_STATE_INACTIVE,.PROGRAM_STATE_INACTIVE, .PROGRAM_STATE_NON_CONTROL, .LOADGROUP_STATE_INACTIVE {color: #555;}
